--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 CV</p>
+        <p>&copy;CV 2024 </p>
     </footer>
 
     <script src="index.js"></script>
