--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         </ul>
     </nav>
 
-    <section id="about">
+    <section id="about" style="width: 80%;">
         <h2>About</h2>
 <p>I am a software engineer with experience in web development using HTML, CSS, and JavaScript. I enjoy working on innovative projects and learning new technologies.</p>   
  </section>
 
-    <section id="skills">
+    <section id="skills" style="width: 80%;">
         <h2>Skills</h2>
         <ul class="skills-list">
             <li style="background-color: rgb(248, 164, 9);">HTML</li>
@@ -41,7 +41,7 @@
         </ul>
     </section>
 
-    <section id="experience">
+    <section id="experience" style="width: 80%;">
         <h2>Experience</h2>
         <div class="job">
             <h3>Company XYZ</h3>
@@ -50,7 +50,7 @@
         </div>
     </section>
 
-    <section id="projects">
+    <section id="projects" style="width: 80%;">
         <h2>Projects</h2>
         <div class="project">
             <h3>Task Management Project</h3>
