--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="index.css">
+
     <title>CV</title>
 </head>
 
@@ -26,23 +30,25 @@
     </nav>
 
     <section id="about" style="width: 80%;">
-        <h2>About</h2>
+        <h2 style="color: #2196f3;">About</h2>
 <p>I am a software engineer with experience in web development using HTML, CSS, and JavaScript. I enjoy working on innovative projects and learning new technologies.</p>   
  </section>
 
     <section id="skills" style="width: 80%;">
-        <h2>Skills</h2>
+        <h2  style="color: #2196f3;">Skills</h2>
+
         <ul class="skills-list">
-            <li style="background-color: rgb(248, 164, 9);">HTML</li>
-            <li>CSS</li>
-            <li  style="background-color: rgb(236, 252, 15);">JavaScript</li>
-            <li style="background-color: rgb(25, 116, 235);">React.js</li>
-            <li style="background-color: rgb(14, 230, 25);">Node.js</li>
+            <li style="background-color: #ff9800;">HTML</li>
+<li>CSS</li>
+<li style="background-color: #ffeb3b;">JavaScript</li>
+<li style="background-color: #2196f3;">React.js</li>
+<li style="background-color: #4caf50;">Node.js</li>
+
         </ul>
     </section>
 
     <section id="experience" style="width: 80%;">
-        <h2>Experience</h2>
+        <h2 style="color: #2196f3;">Experience</h2>
         <div class="job">
             <h3>Company XYZ</h3>
             <p> Software engineering (2020 - حتى الآن)</p>
@@ -51,7 +57,8 @@
     </section>
 
     <section id="projects" style="width: 80%;">
-        <h2>Projects</h2>
+        <h2  style="color: #2196f3;">Projects</h2>
+
         <div class="project">
             <h3>Task Management Project</h3>
             <p>A web application that helps users organize their tasks using modern technologies such as React and Node.js.</p>
