--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#experience"> Experience</a></li>
-            <li  ><a href="#projects" >Projects</a></li>
+            <li   style="margin-left: -10%;"><a href="#projects" >Projects</a></li>
         </ul>
     </nav>
 
